force-app/main/default/objects/Payment_Gateway__c/Payment_Gateway__c.object-meta.xml
<CustomObject>
    <label>Payment Gateway</label>
    <nameField>
        <displayFormat>PS-{000000000}</displayFormat>
        <label>Payment Gateway Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>