force-app/main/default/objects/Payment_Gateway__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Payer Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>