force-app/main/default/objects/Payment_Gateway__c/fields/Payment_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Created_Date__c</fullName>
    <label>Payment Created Date</label>
    <type>DateTime</type>
</CustomField>