force-app/main/default/objects/Payment_Gateway__c/fields/Payment_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Expiry_Date__c</fullName>
    <label>Payment Expiry Date</label>
    <length>200</length>
    <type>Text</type>
</CustomField>