force-app/main/default/objects/Payment_Gateway__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>UserCancelled</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>