force-app/main/default/objects/Payment_Gateway__c/fields/Payment_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Updated_Date__c</fullName>
    <label>Payment Updated Date</label>
    <type>DateTime</type>
</CustomField>