force-app/main/default/objects/Payment_Gateway__c/fields/Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_URL__c</fullName>
    <label>Payment URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>