force-app/main/default/objects/Payment_Gateway__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Payer Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>